Fix failing tests after adding monitoring events for progress of building construction.